# versionflow

./: .gitignore  .travis.yaml  .travis.yml  .versionflow  README.md  action_decorator.py  dev_requirements.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  states_for_tests.py  test_states.py  test_versionflow.py  versionflow.py
