[bumpversion]
current_version = 0.0.0

[metadata]
name = versionflow
long_description = file: README.md
long_description_content_type = text/markdown
description = Versioning of Python packages using gitflow, setuptools_scm and bumpversion
url = https://github.com/Whatang/versionflow
author = Mike Thomas
author_email = versionflow@whatang.org
license = GPLv3
keywords = versioning

[options]
setup_requires = 
	setuptools_scm>=3.2.0
install_requires = 
	click>=7.0
	setuptools_scm>=3.2.0
	find_ida_user_dir>=0.3
	attrs>=18.2.0
	gitpython>=2.1.11
	gitflow>=0.5.1
py_modules = 
	versionflow
