[metadata]
name = versionflow
long_description = file: README.md
long_description_content_type = text/markdown
description = Automatic Semantic Versioning with Git Flow.
url = https://github.com/Whatang/versionflow
author = Mike Thomas
author_email = versionflow@whatang.org
license = GPLv3
keywords = versioning
version = 0.3.2

[options]
setup_requires =
	setuptools_scm==3.2.0
install_requires =
	click==7.0
	setuptools_scm==3.2.0
	attrs==18.2.0
	bump2version==0.5.10
	gitpython==2.1.11
	nu-gitflow==1.0.2
	configparser
	six==1.12.0
py_modules =
	versionflow

[options.entry_points]
console_scripts =
	versionflow = versionflow:cli
